# full-text-search

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  config.json
client/: main.py
cmake/: CompileOptions.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: main.cpp
src/common/: CMakeLists.txt
src/common/common/: parser.cpp  parser.hpp  parser.test.cpp
src/driver/: CMakeLists.txt
src/driver/driver/: driver.cpp  driver.hpp
src/indexer/: CMakeLists.txt
src/indexer/indexer/: indexer.cpp  indexer.hpp  indexer.test.cpp
src/libfts/: CMakeLists.txt
src/libfts/libfts/: fts.cpp  fts.hpp  fts.test.cpp
src/searcher/: CMakeLists.txt
src/searcher-c/: CMakeLists.txt
src/searcher-c/searcher-c/: searcher-c.cpp  searcher-c.h
src/searcher/searcher/: searcher.cpp  searcher.hpp  searcher.test.cpp
